After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 707493 - power: Ignore battery devices that aren't present
power: Ignore battery devices that aren't present
Status: RESOLVED FIXED
Product: gnome-settings-daemon
Classification: Core
Component: power
unspecified
Other All
: Normal normal
: ---
Assigned To: gnome-settings-daemon-maint
gnome-settings-daemon-maint
Depends on:
Blocks: 706734
 
 
Reported: 2013-09-04 18:54 UTC by Jasper St. Pierre (not reading bugmail)
Modified: 2013-09-05 16:28 UTC
See Also:
GNOME target: 3.10
GNOME version: ---


Attachments
power: Ignore battery devices that aren't present (3.04 KB, patch)
2013-09-04 18:54 UTC, Jasper St. Pierre (not reading bugmail)
committed Details | Review

Description Jasper St. Pierre (not reading bugmail) 2013-09-04 18:54:11 UTC
This fixes the battery menu showing on devices without batteries
under gnome-shell.
Comment 1 Jasper St. Pierre (not reading bugmail) 2013-09-04 18:54:12 UTC
Created attachment 254120 [details] [review]
power: Ignore battery devices that aren't present
Comment 2 Richard Hughes 2013-09-05 13:41:04 UTC
Review of attachment 254120 [details] [review]:

Looks good to me, thanks.
Comment 3 Jasper St. Pierre (not reading bugmail) 2013-09-05 14:02:55 UTC
Attachment 254120 [details] pushed as 425b892 - power: Ignore battery devices that aren't present
Comment 4 Bastien Nocera 2013-09-05 16:28:12 UTC
Not very happy that you chose to ignore my comments on IRC about splitting up the patch in smaller pieces, especially at this point in the release cycle.