power: Ignore battery devices that aren't present

This fixes the battery menu showing on devices without batteries
under gnome-shell.

https://bugzilla.gnome.org/show_bug.cgi?id=707493